--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "type-check": "tsc"
   },
   "dependencies": {
+    "@dannymoerkerke/fido2-lib": "^2.4.1",
+    "base64url": "^3.0.1",
+    "cors": "^2.8.5",
+    "iron-session": "^6.0.5",
     "next": "latest",
+    "next-absolute-url": "^1.2.2",
+    "next-pwa": "^5.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
