--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-qrcode": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-qr-reader": "^3.0.0-beta-1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
